Fix: on mobile, when clicking on navbar item, it'll now close

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,11 +97,6 @@ hr.block {
 }
 
 /*-------------------------- navbar */
-.nav-link {
-  font-size: 1.2rem;
-  margin-right: 0.8rem;
-  margin-left: 0.8rem;
-}
 
 /*-------------------------- landing page */
 .user-location-button {
